@@ -1,5 +1,8 @@
 2006-04-02  Martin Grimme  <martin.grimme@lintegra.de>
 
+	* src/main.c: Start playing when loading the first title into the
+	playlist.
+
 	* src/gui.c: Added button for clearing the playlist.
 
 2006-04-02  Martin Grimme  <martin.grimme@lintegra.de>
